// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LetterRenderForm snapshots matches snapshot for long variant 1`] = `
<DocumentFragment>
  <form
    id="letter-preview-long"
  >
    <h3
      class="nhsuk-heading-s"
    >
      PDS personalisation fields
    </h3>
    <p
      class="nhsuk-body-s"
    >
      The PDS fields will be pre-filled with example data when you choose a test recipient.
    </p>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="pdsPersonalisationPackId-long"
      >
        Example recipient
      </label>
      <select
        class="nhsuk-select"
        id="pdsPersonalisationPackId-long"
        name="pdsPersonalisationPackId"
      >
        <option
          value=""
        >
          Select a recipient
        </option>
        <option
          value="long-1"
        >
          Joseph Anthony Hendrington-Bloggs
        </option>
        <option
          value="long-2"
        >
          Dr Alejandro Ruiz Fernandez
        </option>
        <option
          value="long-3"
        >
          Prof Catherine Montgomery-Harrington
        </option>
      </select>
    </div>
    <h3
      class="nhsuk-heading-s nhsuk-u-padding-top-4"
    >
      Custom personalisation fields
    </h3>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="custom-appointmentDate-long"
      >
        appointmentDate
      </label>
      <input
        class="nhsuk-input"
        id="custom-appointmentDate-long"
        maxlength="500"
        name="custom_appointmentDate"
        type="text"
        value=""
      />
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4"
      type="submit"
    >
      Update preview
    </button>
  </form>
</DocumentFragment>
`;

exports[`LetterRenderForm snapshots matches snapshot for short variant 1`] = `
<DocumentFragment>
  <form
    id="letter-preview-short"
  >
    <h3
      class="nhsuk-heading-s"
    >
      PDS personalisation fields
    </h3>
    <p
      class="nhsuk-body-s"
    >
      The PDS fields will be pre-filled with example data when you choose a test recipient.
    </p>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="pdsPersonalisationPackId-short"
      >
        Example recipient
      </label>
      <select
        class="nhsuk-select"
        id="pdsPersonalisationPackId-short"
        name="pdsPersonalisationPackId"
      >
        <option
          value=""
        >
          Select a recipient
        </option>
        <option
          value="short-1"
        >
          Jo Blogs
        </option>
        <option
          value="short-2"
        >
          Dr Li Wei
        </option>
        <option
          value="short-3"
        >
          Mx Ana Kim
        </option>
      </select>
    </div>
    <h3
      class="nhsuk-heading-s nhsuk-u-padding-top-4"
    >
      Custom personalisation fields
    </h3>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="custom-appointmentDate-short"
      >
        appointmentDate
      </label>
      <input
        class="nhsuk-input"
        id="custom-appointmentDate-short"
        maxlength="500"
        name="custom_appointmentDate"
        type="text"
        value=""
      />
    </div>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="custom-clinicName-short"
      >
        clinicName
      </label>
      <input
        class="nhsuk-input"
        id="custom-clinicName-short"
        maxlength="500"
        name="custom_clinicName"
        type="text"
        value=""
      />
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4"
      type="submit"
    >
      Update preview
    </button>
  </form>
</DocumentFragment>
`;

exports[`LetterRenderForm snapshots matches snapshot without custom personalisation 1`] = `
<DocumentFragment>
  <form
    id="letter-preview-short"
  >
    <h3
      class="nhsuk-heading-s"
    >
      PDS personalisation fields
    </h3>
    <p
      class="nhsuk-body-s"
    >
      The PDS fields will be pre-filled with example data when you choose a test recipient.
    </p>
    <div
      class="nhsuk-form-group nhsuk-u-margin-bottom-6"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="pdsPersonalisationPackId-short"
      >
        Example recipient
      </label>
      <select
        class="nhsuk-select"
        id="pdsPersonalisationPackId-short"
        name="pdsPersonalisationPackId"
      >
        <option
          value=""
        >
          Select a recipient
        </option>
        <option
          value="short-1"
        >
          Jo Blogs
        </option>
        <option
          value="short-2"
        >
          Dr Li Wei
        </option>
        <option
          value="short-3"
        >
          Mx Ana Kim
        </option>
      </select>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4"
      type="submit"
    >
      Update preview
    </button>
  </form>
</DocumentFragment>
`;
